--- a/src/app/main/settings/manageEmail/manageEmail.html
+++ b/src/app/main/settings/manageEmail/manageEmail.html
@@ -14,14 +14,15 @@
                             <div class="caption ">
                                 <span class=" caption-subject  font-black  uppercase" style="font-weight: 600;">Manage email Alert</span>
 
-                                <div class="caption-helper font-black font-sm"></div>
+                                <div class="caption-helper font-black font-sm">Listed below are the alerts you will receive from us through email.If you wish to
+                                unsubscribe any of the alert. Please de-select the alert.</div>
                             </div>
 
                         </div>
                         <div class="portlet-body form form-horizontal">
-                            <p> Listed below are the alerts you will receive from us through email.If you wish to
+                            <!--<p> Listed below are the alerts you will receive from us through email.If you wish to
                                 unsubscribe any of the alert.Please de-select the alert.</p>
-                            <hr>
+                            <hr>-->
                             <div class="form-group portlet-title">
 
                                 <div class="col-md-1 margin-top-10">
