message pages added

--- a/src/app/navigation/message/inbox/inboxNavigation.html
+++ b/src/app/navigation/message/inbox/inboxNavigation.html
@@ -13,18 +13,18 @@
                                     <span >ALL</span>
                                 </a>
                             </li>
-                            <li ng-class="{ activateSettingNavBar: isActive('/settings/emailalerts')}" class="nav-item" id="pending">
-                                <a ui-sref="settings.emailalerts" class="nav-link ">
+                            <li ng-class="{ activateSettingNavBar: isActive('/messages/pending')}" class="nav-item" id="pending">
+                                <a ui-sref="messages.pending" class="nav-link ">
                                     <span class="title">Pending</span>
                                 </a>
                             </li>
-                            <li ng-class="{ activateSettingNavBar: isActive('/settings/contactFilters')}" class="nav-item " id="accept">
-                                <a ui-sref="settings.contactFilters" class="nav-link ">
+                            <li ng-class="{ activateSettingNavBar: isActive('/messages/accept')}" class="nav-item " id="accept">
+                                <a ui-sref="messages.accept" class="nav-link ">
                                     <span class="title">Accepted</span>
                                 </a>
                             </li>
-                            <li ng-class="{ activateSettingNavBar: isActive('/settings/privacySettings')}" class="nav-item" id="decline">
-                                <a ui-sref="settings.privacySettings" class="nav-link ">
+                            <li ng-class="{ activateSettingNavBar: isActive('/messages/declined')}" class="nav-item" id="decline">
+                                <a ui-sref="messages.declined" class="nav-link ">
                                     <span class="title">Declined</span>
                                 </a>
                             </li>
