--- a/src/app/main/message/inbox/pending/messagePending.html
+++ b/src/app/main/message/inbox/pending/messagePending.html
@@ -7,19 +7,28 @@
             <!-- BEGIN PAGE BASE CONTENT -->
 
             <div class="row">
+                <div class="col-md-12 text-right">
+                    <pagination total-elements="50" num-pages="10" ng-model="currentPage" ng-change="pageChange()" current-page="currentPage" class="pagination-small"></pagination>
+                </div>
                 <div class="col-md-12 ">
-                    <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="portlet light bordered">
-                        <div class="portlet-title">
-                            <div class="caption font-red-sunglo">
-                                <i class="icon-settings font-red-sunglo"></i>
-                                <span class="caption-subject bold uppercase"> Message</span>
+                    <div class="portlet light bordered ">
+                        <div class="portlet-title " style="border-bottom: 0px">
+                            <div class="caption green" style="font-size: 12px">
+                                <span class="caption-subject profile-sort   "> Profile shorts :</span>
+                                <span> <input class="filter-check-box" type="checkbox"/>Photo Available</span>
+                                <span> <input class="filter-check-box" type="checkbox"/>Horoscope Available</span>
+                                <span> <input class="filter-check-box" type="checkbox"/>On line Now</span>
+                                <span style="margin-left:20px"> More</span>
                             </div>
                             <div class="actions">
                                 <div class="btn-group">
-                                    <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
-                                        <i class="fa fa-angle-down"></i>
+                                    <a class="btn btn-sm red dropdown-toggle" href="javascript:;"
+                                       data-toggle="dropdown">
+                                        <i class="fa fa-bars"></i>
                                     </a>
+                                    <a class="btn btn-sm red dropdown-toggle" href="javascript:;"
+                                       data-toggle="dropdown">
+                                        <i class="fa fa-map"></i>                                    </a>
                                     <ul class="dropdown-menu pull-right">
                                         <li>
                                             <a href="javascript:;">
@@ -33,7 +42,7 @@
                                             <a href="javascript:;">
                                                 <i class="fa fa-ban"></i> Ban </a>
                                         </li>
-                                        <li class="divider"> </li>
+                                        <li class="divider"></li>
                                         <li>
                                             <a href="javascript:;"> Make admin </a>
                                         </li>
@@ -41,104 +50,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="portlet-body form">
-
-                        </div>
                     </div>
-
                 </div>
 
             </div>
-            <!-- END PAGE TITLE -->
-            <!-- BEGIN PAGE TOOLBAR -->
-            <div class="page-toolbar">
-                <!-- BEGIN THEME PANEL -->
-                <div class="btn-group btn-theme-panel">
-                    <a href="javascript:;" class="btn dropdown-toggle" data-toggle="dropdown">
-                        <i class="icon-settings"></i>
-                    </a>
-                    <div class="dropdown-menu theme-panel pull-right dropdown-custom hold-on-click">
-                        <div class="row">
-                            <div class="col-md-4 col-sm-4 col-xs-12">
-                                <h3>THEME</h3>
-                                <ul class="theme-colors">
-                                    <li class="theme-color theme-color-default" data-theme="default">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Dark Header</span>
-                                    </li>
-                                    <li class="theme-color theme-color-light active" data-theme="light">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Light Header</span>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-md-8 col-sm-8 col-xs-12 seperator">
-                                <h3>LAYOUT</h3>
-                                <ul class="theme-settings">
-                                    <li> Theme Style
-                                        <select class="layout-style-option form-control input-small input-sm">
-                                            <option value="square">Square corners</option>
-                                            <option value="rounded" selected="selected">Rounded corners</option>
-                                        </select>
-                                    </li>
-                                    <li> Layout
-                                        <select class="layout-option form-control input-small input-sm">
-                                            <option value="fluid" selected="selected">Fluid</option>
-                                            <option value="boxed">Boxed</option>
-                                        </select>
-                                    </li>
-                                    <li> Header
-                                        <select class="page-header-option form-control input-small input-sm">
-                                            <option value="fixed" selected="selected">Fixed</option>
-                                            <option value="default">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Top Dropdowns
-                                        <select class="page-header-top-dropdown-style-option form-control input-small input-sm">
-                                            <option value="light">Light</option>
-                                            <option value="dark" selected="selected">Dark</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Mode
-                                        <select class="sidebar-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Menu
-                                        <select class="sidebar-menu-option form-control input-small input-sm">
-                                            <option value="accordion" selected="selected">Accordion</option>
-                                            <option value="hover">Hover</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Position
-                                        <select class="sidebar-pos-option form-control input-small input-sm">
-                                            <option value="left" selected="selected">Left</option>
-                                            <option value="right">Right</option>
-                                        </select>
-                                    </li>
-                                    <li> Footer
-                                        <select class="page-footer-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- END THEME PANEL -->
-            </div>
-            <!-- END PAGE TOOLBAR -->
+
         </div>
-        <!-- END PAGE HEAD-->
-        <!-- BEGIN PAGE BREADCRUMB -->
 
-
-
-
-        <!-- END PAGE BASE CONTENT -->
     </div>
-    <!-- END CONTENT BODY -->
 </div>
