--- a/src/app/navigation/matches/matches.css
+++ b/src/app/navigation/matches/matches.css
@@ -1,3 +1,52 @@
-.matches span{
+.matches span {
     color: red;
+}
+
+.refined-search-spacing {
+    margin-left: 20px !important;
+}
+
+.refined-search-placeholder-spacing {
+    margin-left: 16px !important;
+}
+
+.custom-form-control {
+    width: 150%;
+    height: 30px;
+    background-color: #fff;
+    border: 1px solid #c2cad8;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.btn-label-text {
+color: red;
+}
+.custom-button{
+    border-color:lightgray !important;
+    background-color: #fff !important;
+}
+.refined-search-header{
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+.refined-search-area{
+    border-bottom: 1px solid #ddd!important;
+}
+.refined-search-sub-label{
+    font-size: 10px;
+}
+.refined-search-sub-label-count{
+    font-size: 10px;
+    color: red;
+}
+.show-more-less{
+    font-size: 10px;
+    color: red;
+    cursor: pointer;
 }
