progress bar added

--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -423,6 +423,31 @@
                                 <div class="portlet-title">
                                     <div class="caption ">
                                         <!--<i class="icon-settings font-red-sunglo"></i>-->
+                                        <span class=" uppercase"><i class="fa fa-pencil icon-color"></i>&nbsp; Her Partenr preference</span>
+                                    </div>
+
+                                </div>
+                                <div class="portlet-body form">
+                                    <div class="row">
+                                        <div class="col-md-4"></div>
+                                    <div class="col-md-4 page">
+                                    <div class="c100 p50 p12" style="border-radius: 50%!important;">
+                                        <span>50%</span>
+                                        <div class="slice">
+                                            <div class="bar"></div>
+                                            <div class="fill"></div>
+                                        </div>
+                                    </div>
+                                    </div>
+                                        <div class="col-md-4"></div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="portlet-title">
+                                    <div class="caption ">
+                                        <!--<i class="icon-settings font-red-sunglo"></i>-->
                                         <span class=" uppercase"><i class="fa fa-pencil icon-color"></i>&nbsp; Basic Preference</span>
                                     </div>
 
