--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -6,6 +6,9 @@
 
 
             <div class="row">
+                <div class="col-md-12 text-right">
+                    <pagination total-elements="50" num-pages="10" ng-model="currentPage" ng-change="pageChange()" current-page="currentPage" class="pagination-small"></pagination>
+                </div>
                 <div class="col-md-12 ">
                     <div class="portlet light bordered">
                         <div class="portlet-title" style="border-bottom: 0px">
