recommendation page added

--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -23,7 +23,7 @@
                         <li ><a  ui-sref="profile">MY HOME</a></li>
                         <li ><a ui-sref="matches">MATCHES</a></li>
                         <li><a ui-sref="search">SEARCH</a></li>
-                        <li><a href="#about">DAILY MATCHES</a></li>
+                        <li><a ui-sref="recomendation">DAILY MATCHES</a></li>
                         <li><a ui-sref="messages">MESSAGES</a></li>
                         <li><a ui-sref="#">HELP</a></li>
                     </ul>
