--- a/src/app/core/layouts/managePhotoLayout.html
+++ b/src/app/core/layouts/managePhotoLayout.html
@@ -1,16 +1,20 @@
-<span class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
-<div ui-view="toolbar"></div>
-<div class="clearfix"></div>
-    <div class="page-container">
+<div class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
+    <div ui-view="toolbar"></div>
+    <div class="clearfix"></div>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <div class="page-container" >
+                <div ui-view="navigation"></div>
+                <div ui-view="content"></div>
+            </div>
 
-
-        <div ui-view="content"></div>
-
+        </div>
 
     </div>
 
-    </span>
+</div>
+<div class="clearfix"></div>
+<div class="" ui-view="footer"></div>
 
-
-
-
+</div>
