--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -9,133 +9,86 @@
             <div class="row">
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="portlet light bordered">
-                        <div class="portlet-title">
-                            <div class="caption font-red-sunglo">
-                                <i class="icon-settings font-red-sunglo"></i>
-                                <span class="caption-subject bold uppercase"> Decline</span>
-                            </div>
-                            <div class="actions">
-                                <div class="btn-group">
-                                    <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
-                                        <i class="fa fa-angle-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-pencil"></i> Edit </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-trash-o"></i> Delete </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-ban"></i> Ban </a>
-                                        </li>
-                                        <li class="divider"> </li>
-                                        <li>
-                                            <a href="javascript:;"> Make admin </a>
-                                        </li>
-                                    </ul>
+                    <div class="portlet light "
+                         style="padding-top: 0px">
+
+                        <div class=" row vp-main-action">
+                            <div style="text-transform: uppercase;text-align: center;">
+                                <div class="col-md-6 vp-main-link2 "
+                                     ng-class="{'active-link': viewType == 'managephoto'}"
+                                     ng-click="selectType('managephoto')"
+                                        > MANAGE PHOTO
                                 </div>
+                                <div class="col-md-6 vp-main-link2"
+                                     ng-class="{'active-link': viewType == 'privacy'}"
+                                     ng-click="selectType('privacy')"> PHOTO PRIVACY
+                                </div>
+
+
                             </div>
                         </div>
-                        <div class="portlet-body form">
+
+                    </div>
+                    <div ng-if="viewType == 'managephoto'">
+
+                        <div class="portlet light border-rounded">
+
+                            <div class="portlet-body form  form-horizontal">
+                                <div class="row" style="text-align: center;font-size: 21px;margin:70px">
+                                    <span class="  bold "> Get more response by uploading up to 20  photos on your profile</span>
+
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-5">
+                                    <div style="position: relative;padding: 60px;background-color: gainsboro">
+                                        <div class="photo-div"><span class="photo-span">
+                                      <div class="upload-btn-wrapper">
+                                          <button class="btn"
+                                                  style="background-image:url('../assets/images/upload.png');width: 180px;height: 180px "></button>
+                                          <input type="file" name="myfile"/>
+                                      </div>
+
+                                </span></div>
+                                    </div>
+                                        </div>
+                                    <div class="col-md-6">
+</div
+                                    </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div ng-if="viewType == 'privacy'">
+                        <div class="portlet light border-rounded">
+                            <div class="portlet-title">
+                                <div class="caption ">
+                                    <!--<i class="icon-settings font-red-sunglo"></i>-->
+                                    <span class=" uppercase"><i class="fa fa-pencil icon-color"></i>&nbsp; Her Partenr preference</span>
+                                </div>
+
+                            </div>
+                            <div class="portlet-body form">
+                                <div class="row">
+
+
+                                </div>
+
+                            </div>
 
                         </div>
+
+
                     </div>
 
                 </div>
 
             </div>
             <!-- END PAGE TITLE -->
-            <!-- BEGIN PAGE TOOLBAR -->
-            <div class="page-toolbar">
-                <!-- BEGIN THEME PANEL -->
-                <div class="btn-group btn-theme-panel">
-                    <a href="javascript:;" class="btn dropdown-toggle" data-toggle="dropdown">
-                        <i class="icon-settings"></i>
-                    </a>
-                    <div class="dropdown-menu theme-panel pull-right dropdown-custom hold-on-click">
-                        <div class="row">
-                            <div class="col-md-4 col-sm-4 col-xs-12">
-                                <h3>THEME</h3>
-                                <ul class="theme-colors">
-                                    <li class="theme-color theme-color-default" data-theme="default">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Dark Header</span>
-                                    </li>
-                                    <li class="theme-color theme-color-light active" data-theme="light">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Light Header</span>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-md-8 col-sm-8 col-xs-12 seperator">
-                                <h3>LAYOUT</h3>
-                                <ul class="theme-settings">
-                                    <li> Theme Style
-                                        <select class="layout-style-option form-control input-small input-sm">
-                                            <option value="square">Square corners</option>
-                                            <option value="rounded" selected="selected">Rounded corners</option>
-                                        </select>
-                                    </li>
-                                    <li> Layout
-                                        <select class="layout-option form-control input-small input-sm">
-                                            <option value="fluid" selected="selected">Fluid</option>
-                                            <option value="boxed">Boxed</option>
-                                        </select>
-                                    </li>
-                                    <li> Header
-                                        <select class="page-header-option form-control input-small input-sm">
-                                            <option value="fixed" selected="selected">Fixed</option>
-                                            <option value="default">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Top Dropdowns
-                                        <select class="page-header-top-dropdown-style-option form-control input-small input-sm">
-                                            <option value="light">Light</option>
-                                            <option value="dark" selected="selected">Dark</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Mode
-                                        <select class="sidebar-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Menu
-                                        <select class="sidebar-menu-option form-control input-small input-sm">
-                                            <option value="accordion" selected="selected">Accordion</option>
-                                            <option value="hover">Hover</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Position
-                                        <select class="sidebar-pos-option form-control input-small input-sm">
-                                            <option value="left" selected="selected">Left</option>
-                                            <option value="right">Right</option>
-                                        </select>
-                                    </li>
-                                    <li> Footer
-                                        <select class="page-footer-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- END THEME PANEL -->
-            </div>
-            <!-- END PAGE TOOLBAR -->
+
         </div>
         <!-- END PAGE HEAD-->
         <!-- BEGIN PAGE BREADCRUMB -->
-
-
 
 
         <!-- END PAGE BASE CONTENT -->
