manage photo changes

--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -23,7 +23,7 @@
                                                 </div>
                                                 <div class="row ">
                                                     <div class="col-md-12">
-                                                        <span class="menu-option">Add more Photo</span>
+                                                        <span class="menu-option"><a style="color: red" ui-sref="managephoto">Add more Photo</a></span>
                                                     </div>
                                                     <div class="col-md-12">
                                                         <span class="menu-option">Edit Profile</span>
