--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -1,4 +1,44 @@
-<div class="page-content-wrapper">
+<div class="page-sidebar-wrapper">
+    <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px;margin-top:10px">
+        <div style="background-color: white;">
+            <div class="row">
+                <div class="col-md-12  " style="text-align:center;margin-top: 20px">
+                    <span class="bold">Profile Picture</span><br>
+<div style="margin: 20px;font-size: 10px;color:grey">You are not yet uploaded even a single photo. Upload photo and add a face to your profile    </div>            </div>
+                <div class="col-md-12 " style="text-align:center;margin-top: 20px">
+                    <img style="width: 100px;height: 130px;!important;" src="assets/images/prof1.jpg"/>
+                </div>
+
+                <div class="col-md-12  " style="text-align:center;margin-top: 20px">
+                    <button class="btn btn-sm red-mint" style="border-radius: 20px"><i class="fa fa-camera"></i> Change
+                        Profile Photo
+                    </button>
+                </div>
+
+                <div class="col-md-12  " style="text-align:center;margin-top: 20px">
+                    <button class="btn btn-sm " style="border-radius: 20px"><i class="fa fa-camera"></i> Upload Photo
+                    </button>
+                </div>
+
+                <div class="col-md-12  " style="margin-top:10px;margin-bottom:10px;text-align: center;color:red">
+                    <a style="color: red">Preview </a>|
+                    <a style="color: red">Photo FAQ</a>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+
+    </div>
+
+    <!-- END SIDEBAR MENU -->
+</div>
+<!-- END SIDEBAR -->
+</div>
+<div class="page-content-wrapper" style="margin-top: -10px">
     <!-- BEGIN CONTENT BODY -->
     <div class="page-content">
         <!-- BEGIN PAGE HEAD-->
@@ -34,14 +74,14 @@
                         <div class="portlet light border-rounded">
 
                             <div class="portlet-body form  form-horizontal">
-                                <div class="row" style="text-align: center;font-size: 21px;margin:70px">
+                                <div class="row" style="text-align: center;font-size: 21px;margin:20px">
                                     <span class="  bold "> Get more response by uploading up to 20  photos on your profile</span>
 
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-5">
-                                    <div style="position: relative;padding: 60px;background-color: gainsboro">
-                                        <div class="photo-div"><span class="photo-span">
+                                    <div class="col-md-5 col-sm-12">
+                                        <div style="position: relative;padding: 60px;width:360px;background-color: gainsboro">
+                                            <div class="photo-div"><span class="photo-span">
                                       <div class="upload-btn-wrapper">
                                           <button class="btn"
                                                   style="background-image:url('../assets/images/upload.png');width: 180px;height: 180px "></button>
@@ -49,11 +89,14 @@
                                       </div>
 
                                 </span></div>
-                                    </div>
                                         </div>
-                                    <div class="col-md-6">
-</div
                                     </div>
+                                    <div class="col-md-1"></div>
+                                    <div class="col-md-6">
+                                        <button type="button" class="btn btn-primary">Facebook</button>
+
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
@@ -64,14 +107,93 @@
                             <div class="portlet-title">
                                 <div class="caption ">
                                     <!--<i class="icon-settings font-red-sunglo"></i>-->
-                                    <span class=" uppercase"><i class="fa fa-pencil icon-color"></i>&nbsp; Her Partenr preference</span>
+                                    <span class=" uppercase">Choose Display options</span>
+
+                                    <div style="font-size: 10px">Choose Display options</div>
                                 </div>
 
                             </div>
                             <div class="portlet-body form">
                                 <div class="row">
 
+                                    <div class="col-md-12">
+                                        <input type="radio">Visible to all
+                                    </div>
+                                    <div class="col-md-12">
+                                        <input type="radio">Visible only on invitation sent/accepted
+                                    </div>
+                                    <div class="col-md-12">
+                                        <input type="radio">Password protected
+                                    </div>
+                                </div>
+                                <div class="row">
 
+                                </div>
+
+                                <div class="row margin-top-20" >
+                                    <div class="col-md-9 col-md-offest-2">
+                                    <div class="col-md-12" style="font-size: 18px;color:#4cbcac;margin-bottom: 25px">
+                                        This is how the photo will look to other members
+                                    </div>
+                                    <div class="col-md-6">
+                                        <img style="height: 200px"
+                                             ng-src="../assets/images/prof1.jpg"/>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="row">
+                                            <div class="col-md-12" style="border-bottom: 1px solid #eef1f5;">
+                                                <table width="100%" style="margin-bottom: 10px;" class="match-table">
+                                                    <tr>
+                                                        <td width="30%" class="first-row">Age/Height</td>
+                                                        <td width="5%">:</td>
+                                                        <td width="45%">25,5`7</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="first-row">Religion</td>
+                                                        <td>:</td>
+                                                        <td>Hindu</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="first-row">Mother Tongue</td>
+                                                        <td>:</td>
+                                                        <td>Tamil</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="first-row">Community</td>
+                                                        <td>:</td>
+                                                        <td>Vaniyakullak Kshathriya</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="first-row">Star</td>
+                                                        <td>:</td>
+                                                        <td>Swathi</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="first-row">Education</td>
+                                                        <td>:</td>
+                                                        <td>Btech</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="first-row">Profession/Income</td>
+                                                        <td>:</td>
+                                                        <td>Software engineer</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="first-row">Location</td>
+                                                        <td>:</td>
+                                                        <td>Bangalore</td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    </div>
+                                </div>
+
+                                <div class="row  " style="border-radius: 10px;margin:20px">
+                                    <button class="btn btn-sm red-mint" style="border-radius: 20px"><i class="fa fa-camera"></i> Save settings
+                                    </button>
                                 </div>
 
                             </div>
