--- a/src/app/toolbar/message/messagetoolbar.html
+++ b/src/app/toolbar/message/messagetoolbar.html
@@ -82,8 +82,8 @@
 					<ul class="main-tool-link uppercase">
 						<li><a ng-class="{ activetoolbar: isActive('/messages')}" ui-sref="messages">Inbox</a></li>
 						<li><a ng-class="{ activetoolbar: isActive('/messages/sent')}" ui-sref="messages.sent">Sent all</a></li>
-						<li><a ng-class="{ activetoolbar: isActive('/messages/chat')}" ui-sref="search.robo">Chat</a></li>
-						<li><a ng-class="{ activetoolbar: isActive('/messages/filtered')}" ui-sref="search.searchbyId">Filtered</a></li>
+						<li><a ng-class="{ activetoolbar: isActive('/messages/chat')}" ui-sref="messages.chat">Chat</a></li>
+						<li><a ng-class="{ activetoolbar: isActive('/messages/filtered')}" ui-sref="messages.filtered">Filtered</a></li>
 					</ul>
 				</div>
 
