--- a/src/app/main/message/inbox/declined/messageDeclined.html
+++ b/src/app/main/message/inbox/declined/messageDeclined.html
@@ -1,144 +1,184 @@
 <div class="page-content-wrapper">
-    <!-- BEGIN CONTENT BODY -->
-    <div class="page-content">
-        <!-- BEGIN PAGE HEAD-->
-        <div class="page-head">
+	<!-- BEGIN CONTENT BODY -->
+	<div class="page-content">
+		<!-- BEGIN PAGE HEAD-->
+		<div class="page-head">
 
-            <!-- BEGIN PAGE BASE CONTENT -->
+			<!-- BEGIN PAGE BASE CONTENT -->
 
-            <div class="row">
-                <div class="col-md-12 ">
-                    <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="portlet light bordered">
-                        <div class="portlet-title">
-                            <div class="caption font-red-sunglo">
-                                <i class="icon-settings font-red-sunglo"></i>
-                                <span class="caption-subject bold uppercase"> Message</span>
-                            </div>
-                            <div class="actions">
-                                <div class="btn-group">
-                                    <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
-                                        <i class="fa fa-angle-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-pencil"></i> Edit </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-trash-o"></i> Delete </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-ban"></i> Ban </a>
-                                        </li>
-                                        <li class="divider"> </li>
-                                        <li>
-                                            <a href="javascript:;"> Make admin </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="portlet-body form">
-
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-            <!-- END PAGE TITLE -->
-            <!-- BEGIN PAGE TOOLBAR -->
-            <div class="page-toolbar">
-                <!-- BEGIN THEME PANEL -->
-                <div class="btn-group btn-theme-panel">
-                    <a href="javascript:;" class="btn dropdown-toggle" data-toggle="dropdown">
-                        <i class="icon-settings"></i>
-                    </a>
-                    <div class="dropdown-menu theme-panel pull-right dropdown-custom hold-on-click">
-                        <div class="row">
-                            <div class="col-md-4 col-sm-4 col-xs-12">
-                                <h3>THEME</h3>
-                                <ul class="theme-colors">
-                                    <li class="theme-color theme-color-default" data-theme="default">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Dark Header</span>
-                                    </li>
-                                    <li class="theme-color theme-color-light active" data-theme="light">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Light Header</span>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-md-8 col-sm-8 col-xs-12 seperator">
-                                <h3>LAYOUT</h3>
-                                <ul class="theme-settings">
-                                    <li> Theme Style
-                                        <select class="layout-style-option form-control input-small input-sm">
-                                            <option value="square">Square corners</option>
-                                            <option value="rounded" selected="selected">Rounded corners</option>
-                                        </select>
-                                    </li>
-                                    <li> Layout
-                                        <select class="layout-option form-control input-small input-sm">
-                                            <option value="fluid" selected="selected">Fluid</option>
-                                            <option value="boxed">Boxed</option>
-                                        </select>
-                                    </li>
-                                    <li> Header
-                                        <select class="page-header-option form-control input-small input-sm">
-                                            <option value="fixed" selected="selected">Fixed</option>
-                                            <option value="default">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Top Dropdowns
-                                        <select class="page-header-top-dropdown-style-option form-control input-small input-sm">
-                                            <option value="light">Light</option>
-                                            <option value="dark" selected="selected">Dark</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Mode
-                                        <select class="sidebar-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Menu
-                                        <select class="sidebar-menu-option form-control input-small input-sm">
-                                            <option value="accordion" selected="selected">Accordion</option>
-                                            <option value="hover">Hover</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Position
-                                        <select class="sidebar-pos-option form-control input-small input-sm">
-                                            <option value="left" selected="selected">Left</option>
-                                            <option value="right">Right</option>
-                                        </select>
-                                    </li>
-                                    <li> Footer
-                                        <select class="page-footer-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- END THEME PANEL -->
-            </div>
-            <!-- END PAGE TOOLBAR -->
-        </div>
-        <!-- END PAGE HEAD-->
-        <!-- BEGIN PAGE BREADCRUMB -->
+			<div class="row">
+				<div class="col-md-12 text-right">
+					<pagination total-elements="50" num-pages="10" ng-model="currentPage" ng-change="pageChange()" current-page="currentPage"
+						class="pagination-small"></pagination>
+				</div>
+				<div class="col-md-12 ">
+					<div class="portlet light  border-rounded ">
+						<div class="portlet-title " style="border-bottom: 0px">
+							<div class="caption green" style="font-size: 12px">
+								<span> <input class="filter-check-box" type="checkbox"/>Select All</span>&nbsp; | &nbsp;
+								<span> Delete</span>
+							</div>
+							<div class="actions">
+								<div class="btn-group">
+									<a class="btn btn-sm red dropdown-toggle" href="javascript:;" data-toggle="dropdown">
+										<i class="fa fa-filter"></i>
+									</a>
+									<!--<a class="btn btn-sm red dropdown-toggle" href="javascript:;" data-toggle="dropdown">
+										<i class="fa fa-map"></i> </a>-->
+									<ul class="dropdown-menu pull-right">
+										<li>
+											<a href="javascript:;">
+												<i class="fa fa-pencil"></i> Edit </a>
+										</li>
+										<li>
+											<a href="javascript:;">
+												<i class="fa fa-trash-o"></i> Delete </a>
+										</li>
+										<li>
+											<a href="javascript:;">
+												<i class="fa fa-ban"></i> Ban </a>
+										</li>
+										<li class="divider"></li>
+										<li>
+											<a href="javascript:;"> Make admin </a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 
 
 
 
-        <!-- END PAGE BASE CONTENT -->
-    </div>
-    <!-- END CONTENT BODY -->
-</div>
+			</div>
+			
+
+			<div class="portlet light  border-rounded">
+
+				<div class="portlet-body form">
+
+					<div class="col-md-3">
+						<div class="row">
+
+							<div class="col-md-3"><input class="filter-check-box" type="checkbox" /></div>
+							<div class="col-md-3"><img style="height: 80px;width: 80px" ng-src="../assets/images/prof1.jpg" />
+							</div>
+						</div>
+					</div>
+					<div class="col-md-9">
+						<div class="row">
+
+							<div class="col-md-5"><label class="message-name-text">Rithika </label> &nbsp;<label class="style-cls">(356598)</label></div>
+							<div class="col-md-4"></div>
+							<div class="col-md-3 pull-right"><label class="style-cls">12-Dec-2017</label><i class="fa fa-trash  pull-right style-cls " style="padding-top:5px;"></i></div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 details-style">
+								23 Yrs, 5Ft/152cm, Tamil, Hindu, Mani Telugu Chettiar, B-Tech, Software Professional, Chennai, Tamil Nadu, Indian.
+							</div>
+
+						</div>
+						<hr>
+						<div class="row">
+							<div class="col-md-12 notification-style uppercase">View Photo declined</div>
+
+							<div class="col-md-12 notification-details">You have declined her request to add photo.</div>
+						</div>
+						
+					</div>
+
+					<div class="row">
+
+					</div>
+				</div>
+			</div>
+			<div class="portlet light  border-rounded">
+
+				<div class="portlet-body form">
+
+					<div class="col-md-3">
+						<div class="row">
+
+							<div class="col-md-3"><input class="filter-check-box" type="checkbox" /></div>
+							<div class="col-md-3"><img style="height: 80px;width: 80px" ng-src="../assets/images/prof1.jpg" />
+							</div>
+						</div>
+					</div>
+					<div class="col-md-9">
+						<div class="row">
+
+							<div class="col-md-5"><label class="message-name-text">Priya Anand </label> &nbsp;<label class="style-cls">(356598)</label></div>
+							<div class="col-md-4"><i class="fa fa-circle " style="color:#56bb55 ;padding-top:5px;"></i>&nbsp;<label>Online</label></div>
+							<div class="col-md-3 pull-right"><label class="style-cls">12-Dec-2017</label><i class="fa fa-trash  pull-right style-cls " style="padding-top:5px;"></i></div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 details-style">
+								23 Yrs, 5Ft/152cm, Tamil, Hindu, Mani Telugu Chettiar, B-Tech, Software Professional, Chennai, Tamil Nadu, Indian.
+							</div>
+
+						</div>
+						<hr>
+						<div class="row">
+							<div class="col-md-12 notification-style uppercase">View Photo declined</div>
+
+							<div class="col-md-12 notification-details">She has declined your request to view her photo.</div>
+						</div>
+						
+					</div>
+
+					<div class="row">
+
+					</div>
+				</div>
+			</div>
+
+			<div class="portlet light  border-rounded">
+
+				<div class="portlet-body form">
+
+					<div class="col-md-3">
+						<div class="row">
+
+							<div class="col-md-3"><input class="filter-check-box" type="checkbox" /></div>
+							<div class="col-md-3"><img style="height: 80px;width: 80px" ng-src="../assets/images/prof1.jpg" />
+							</div>
+						</div>
+					</div>
+					<div class="col-md-9">
+						<div class="row">
+
+							<div class="col-md-5"><label class="message-name-text">Priya Ranjini </label> &nbsp;<label class="style-cls">(356598)</label></div>
+							<div class="col-md-4"><i class="fa fa-circle " style="color:#56bb55 ;padding-top:5px;"></i>&nbsp;<label>Online</label></div>
+							<div class="col-md-3 pull-right"><label class="style-cls">12-Dec-2017</label><i class="fa fa-trash  pull-right style-cls " style="padding-top:5px;"></i></div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 details-style">
+								23 Yrs, 5Ft/152cm, Tamil, Hindu, Mani Telugu Chettiar, B-Tech, Software Professional, Chennai, Tamil Nadu, Indian.
+							</div>
+
+						</div>
+						<hr>
+						<div class="row">
+							<div class="col-md-12 notification-style uppercase">Horoscope request declined</div>
+
+							<div class="col-md-12 notification-details">You have declined her request to add horoscope.</div>
+						</div>
+						
+					</div>
+
+					<div class="row">
+
+					</div>
+				</div>
+			</div>
+			
+
+			<div class="col-md-12 text-right">
+				<pagination total-elements="50" num-pages="10" ng-model="currentPage" ng-change="pageChange()" current-page="currentPage"
+					class="pagination-small"></pagination>
+			</div>
+
+		</div>
+	</div>
