--- a/src/app/navigation/message/sent/sentNavigation.html
+++ b/src/app/navigation/message/sent/sentNavigation.html
@@ -9,12 +9,12 @@
                                     <span class="title"><b>Sent all</b></span>
                             </li>
                             <li  ng-class="{ activateSettingNavBar: isActive('/settings')}" class="nav-item " >
-                                <a ui-sref="settings" class="nav-link ">
+                                <a ui-sref="messages/sent" class="nav-link ">
                                     <span >SENT</span>
                                 </a>
                             </li>
                             <li ng-class="{ activateSettingNavBar: isActive('/settings/emailalerts')}" class="nav-item" id="pending">
-                                <a ui-sref="settings.emailalerts" class="nav-link ">
+                                <a ui-sref="messages/sent" class="nav-link ">
                                     <span class="title">Awaiting Replay</span>
                                 </a>
                             </li>
