--- a/src/app/toolbar/matches/matchestoolbar.html
+++ b/src/app/toolbar/matches/matchestoolbar.html
@@ -23,7 +23,7 @@
 						<li style="background-color: #00c29e"><a ui-sref="matches">MATCHES</a></li>
 						<li><a ui-sref="search">SEARCH</a></li>
 						<li><a ui-sref="matches">DAILY MATCHES</a></li>
-						<li><a ui-sref="message">MESSAGES</a></li>
+						<li><a ui-sref="messages">MESSAGES</a></li>
 						<li><a ui-sref="#">HELP</a></li>
 					</ul>
 				</div>
