manage photo changes

--- a/src/app/navigation/settings/settingNavigation.html
+++ b/src/app/navigation/settings/settingNavigation.html
@@ -5,7 +5,7 @@
 
                     <li class="nav-item  active open">
                         <ul class="sub-menu settingnav" >
-                            <li style="background-color:#f9fafc;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
+                            <li style="background-color:#f9fafc;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " >
                                     <span class="title"><b>Settings</b></span>
                             </li>
                             <li  ng-class="{ activateSettingNavBar: isActive('/settings')}" class="nav-item " id="inbox">
