manage photo lik added

--- a/src/app/navigation/profile/profileNavigation.html
+++ b/src/app/navigation/profile/profileNavigation.html
@@ -10,7 +10,7 @@
                     (P234567)
                 </div>
                 <div class="col-md-12  " style="text-align:center;margin-top: 20px">
-                    <button class="btn btn-sm red-mint" style="border-radius: 20px"><i class="fa fa-camera"></i> UPLOAD
+                    <button ui-sref="managephoto" class="btn btn-sm red-mint" style="border-radius: 20px"><i class="fa fa-camera"></i> UPLOAD
                     </button>
                 </div>
                 <div class="col-md-12  "
