manage photo imge style changed

--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -136,8 +136,10 @@
                                         This is how the photo will look to other members
                                     </div>
                                     <div class="col-md-6">
-                                        <img style="height: 200px"
-                                             ng-src="../assets/images/prof1.jpg"/>
+                                        <div style="height: 200px;width:200px;font-size:40px;text-align: center;line-height: 200px;background-image: url('../assets/images/prof1.jpg');opacity: .2 "><i style="opacity: 1" class="fa fa-expeditedssl"></i>
+                                        <!--<img style="height: 200px;opacity: .2"-->
+                                             <!--ng-src="../assets/images/prof1.jpg"/>-->
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="row">
